--- a/.gitignore
+++ b/.gitignore
@@ -166,6 +166,13 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
+# Coverage
+htmlcov/
+.coverage
+.coverage.*
+coverage.xml
+*.cover
+
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
